@@ -227,8 +227,7 @@ _nss_ldap_rebind (LDAP * ld, char **whop, char **credp, int *methodp,
  * table for the switch. Thus, it's safe to grab the mutex from this
  * function.
  */
-NSS_STATUS
-_nss_ldap_default_destr (nss_backend_t * be, void *args)
+NSS_STATUS _nss_ldap_default_destr (nss_backend_t * be, void *args)
 {
   debug ("==> _nss_ldap_default_destr");
 
@@ -250,8 +249,7 @@ _nss_ldap_default_destr (nss_backend_t * be, void *args)
  * This is the default "constructor" which gets called from each 
  * constructor, in the NSS dispatch table.
  */
-NSS_STATUS
-_nss_ldap_default_constr (nss_ldap_backend_t * be)
+NSS_STATUS _nss_ldap_default_constr (nss_ldap_backend_t * be)
 {
   debug ("==> _nss_ldap_default_constr");
 
@@ -592,11 +590,13 @@ do_open (void)
 #endif /* LDAP_VERSION3_API */
 
 #ifdef LDAP_OPT_REFERRALS
-  ldap_set_option (__session.ls_conn, LDAP_OPT_REFERRALS, cfg->ldc_referrals ? LDAP_OPT_ON : LDAP_OPT_OFF);
+  ldap_set_option (__session.ls_conn, LDAP_OPT_REFERRALS,
+		   cfg->ldc_referrals ? LDAP_OPT_ON : LDAP_OPT_OFF);
 #endif
 
 #ifdef LDAP_OPT_RESTART
-  ldap_set_option (__session.ls_conn, LDAP_OPT_RESTART, cfg->ldc_restart ? LDAP_OPT_ON : LDAP_OPT_OFF);
+  ldap_set_option (__session.ls_conn, LDAP_OPT_RESTART,
+		   cfg->ldc_restart ? LDAP_OPT_ON : LDAP_OPT_OFF);
 #endif
 
 #ifdef TLS
@@ -1349,7 +1349,8 @@ _nss_ldap_next_entry (LDAPMessage * res)
 /*
  * Calls ldap_result() with LDAP_MSG_ONE.
  */
-NSS_STATUS _nss_ldap_result (ent_context_t * ctx)
+NSS_STATUS
+_nss_ldap_result (ent_context_t * ctx)
 {
   return do_result (ctx, LDAP_MSG_ONE);
 }
@@ -1833,8 +1834,7 @@ _nss_ldap_assign_passwd (LDAP * ld,
   return NSS_SUCCESS;
 }
 
-NSS_STATUS
-_nss_ldap_oc_check (LDAP * ld, LDAPMessage * e, const char *oc)
+NSS_STATUS _nss_ldap_oc_check (LDAP * ld, LDAPMessage * e, const char *oc)
 {
   char **vals, **valiter;
   NSS_STATUS ret = NSS_NOTFOUND;
